[gd_scene load_steps=15 format=3 uid="uid://sm72galqfyvf"]

[ext_resource type="Script" uid="uid://bphft7veq5bih" path="res://scripts/LevelSelect.gd" id="1_dbyaq"]
[ext_resource type="Texture2D" uid="uid://0carrwt0kfee" path="res://images/category_select_background.png" id="2_egmj1"]
[ext_resource type="Texture2D" uid="uid://bq0d8hihm2raj" path="res://images/back.png" id="3_6y6kj"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_6y6kj"]
texture = ExtResource("2_egmj1")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_dbyaq"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ibarm"]
bg_color = Color(0.762404, 0.762404, 0.762404, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color(0, 0, 0, 0.203922)
shadow_size = 5
shadow_offset = Vector2(0, 3.41)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fmuyb"]
bg_color = Color(0.601223, 0.601223, 0.601223, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color(0, 0, 0, 0.203922)
shadow_size = 5
shadow_offset = Vector2(0, 3.41)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dbyaq"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color(0, 0, 0, 0.203922)
shadow_size = 5
shadow_offset = Vector2(0, 3.41)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_egmj1"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color(0, 0, 0, 0.203922)
shadow_size = 5
shadow_offset = Vector2(0, 3.41)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6y6kj"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ibarm"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yxdfm"]
bg_color = Color(1, 0.716024, 0.660185, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.925072, 0.654849, 0.379156, 1)
corner_radius_top_left = 90
corner_radius_top_right = 90
corner_radius_bottom_right = 90
corner_radius_bottom_left = 90
shadow_color = Color(0, 0, 0, 0.203922)
shadow_size = 5
shadow_offset = Vector2(4, 4)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3p8qn"]
bg_color = Color(0.866728, 0.575886, 0.166335, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.925072, 0.654849, 0.379156, 1)
corner_radius_top_left = 90
corner_radius_top_right = 90
corner_radius_bottom_right = 90
corner_radius_bottom_left = 90
shadow_color = Color(0, 0, 0, 0.203922)
shadow_size = 5
shadow_offset = Vector2(4, 4)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_t7n47"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.925072, 0.654849, 0.379156, 1)
corner_radius_top_left = 90
corner_radius_top_right = 90
corner_radius_bottom_right = 90
corner_radius_bottom_left = 90
shadow_color = Color(0, 0, 0, 0.203922)
shadow_size = 5
shadow_offset = Vector2(4, 4)

[node name="LevelSelect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_dbyaq")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_6y6kj")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -236.5
offset_top = -91.5
offset_right = 236.5
offset_bottom = 195.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 15

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_y = 3
theme_override_font_sizes/font_size = 45
text = " WÃ¤hle eine Kategorie"
horizontal_alignment = 1
vertical_alignment = 1

[node name="EasyButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_dbyaq")
theme_override_styles/hover = SubResource("StyleBoxFlat_ibarm")
theme_override_styles/pressed = SubResource("StyleBoxFlat_fmuyb")
theme_override_styles/normal = SubResource("StyleBoxFlat_dbyaq")
text = "Leicht"

[node name="MediumButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_dbyaq")
theme_override_styles/hover = SubResource("StyleBoxFlat_ibarm")
theme_override_styles/pressed = SubResource("StyleBoxFlat_fmuyb")
theme_override_styles/normal = SubResource("StyleBoxFlat_egmj1")
text = "Mittel"

[node name="HardButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_dbyaq")
theme_override_styles/hover = SubResource("StyleBoxFlat_ibarm")
theme_override_styles/pressed = SubResource("StyleBoxFlat_fmuyb")
theme_override_styles/normal = SubResource("StyleBoxFlat_6y6kj")
text = "Schwer"

[node name="BackButton" type="Button" parent="."]
layout_mode = 1
offset_left = 33.0
offset_top = 18.0
offset_right = 142.0
offset_bottom = 128.0
theme_override_styles/focus = SubResource("StyleBoxEmpty_ibarm")
theme_override_styles/hover = SubResource("StyleBoxFlat_yxdfm")
theme_override_styles/pressed = SubResource("StyleBoxFlat_3p8qn")
theme_override_styles/normal = SubResource("StyleBoxFlat_t7n47")
icon = ExtResource("3_6y6kj")
icon_alignment = 1
expand_icon = true

[connection signal="pressed" from="BackButton" to="." method="_on_BackButton_pressed"]
